--- a/Part_0/Compute_ROIs.ipynb
+++ b/Part_0/Compute_ROIs.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "90d88425",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import section\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8d09ef30",
    "metadata": {},
    "outputs": [],
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "65fbe275",
    "metadata": {},
    "outputs": [],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "96c9ac3e",
    "metadata": {},
    "outputs": [],
@@ -131,7 +133,7 @@
     "        \n",
     "        # Extract and save ROI.\n",
     "        image_roi = spectrogram_image[top_left_row[0][0]-1:bottom_right_row[0][0]-1, top_left_col[0][0]-1:bottom_right_col[0][0]-1]\n",
-    "        image_roi_filename = root_dir+rois_info['bird'][i]+'/ROIs/'+rois_info['bird'][i]+'_'+repr(bird_rois_info['id'][j])+'.png'\n",
+    "        image_roi_filename = root_dir+rois_info['bird'][i]+'/ROIs/'+rois_info['bird'][i]+'_'+str(bird_rois_info['id'][j])+'.png'\n",
     "        \n",
     "        if os.path.exists(root_dir+rois_info['bird'][i]+'/ROIs/'):\n",
     "            plt.imsave(image_roi_filename, image_roi, cmap='gray')\n",
@@ -146,9 +148,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": ".venv (3.13.1)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -160,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
