--- a/Part_0/Compute_Spectrograms.ipynb
+++ b/Part_0/Compute_Spectrograms.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "90d88425",
    "metadata": {},
    "outputs": [],
@@ -25,17 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5799468c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute Spectogram from the audio recording "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "92ceb13e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4b814932",
    "metadata": {},
    "outputs": [],
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a7b7e97b",
    "metadata": {},
    "outputs": [],
@@ -94,10 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0ca5fe97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171\n"
+     ]
+    }
+   ],
    "source": [
     "# Get list of recordings.\n",
     "recording_list = os.listdir(recording_dir);\n",
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "acab8c45-5f6d-45ce-89ff-b7f85f8288cb",
    "metadata": {},
    "outputs": [],
@@ -153,26 +151,18 @@
     "    spectrograminfo_filename = spectrogram_dir + recording + '_info.txt'\n",
     "    spectrograminfo_file = open(spectrograminfo_filename,'w')    \n",
     "    for i in t:\n",
-    "        spectrograminfo_file.write(repr(i)+'\\n')\n",
+    "        spectrograminfo_file.write(str(i)+'\\n')\n",
     "    for i in w:\n",
-    "        spectrograminfo_file.write(repr(i)+'\\n')\n",
+    "        spectrograminfo_file.write(str(i)+'\\n')\n",
     "    spectrograminfo_file.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2706fbd6-bde8-4070-a148-d6340459757f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": ".venv (3.13.1)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
