--- a/Part_0/Perform_query.ipynb
+++ b/Part_0/Perform_query.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "90d88425",
    "metadata": {},
    "outputs": [],
@@ -28,15 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "45220136-960b-4c1b-9cad-c526bfbf8101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gabor_3_4 features have dimension:24\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature type.\n",
-    "#feature_type = 'mean_stdev'\n",
-    "feature_type = 'Gabor_2_3'\n",
-    "#feature_type = 'Gabor_3_4'\n",
+    "# feature_type = 'mean_stdev'\n",
+    "# feature_type = 'Gabor_2_3'\n",
+    "feature_type = 'Gabor_3_4'\n",
     "\n",
     "cwd=os.getcwd()\n",
     "\n",
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d95c065c",
    "metadata": {},
    "outputs": [],
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8e53f83a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2b39109e",
    "metadata": {},
    "outputs": [],
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9facade8-8955-49ef-912f-24af32861612",
    "metadata": {},
    "outputs": [],
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e9f989d7",
    "metadata": {},
    "outputs": [],
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "97739e46",
    "metadata": {},
    "outputs": [],
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2ce8bd5e",
    "metadata": {},
    "outputs": [],
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ffa8ffbb",
    "metadata": {},
    "outputs": [],
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "545bc603",
    "metadata": {},
    "outputs": [],
@@ -239,10 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "65052143",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         0.90048965 0.79901856 0.74876807 0.70807945 0.64719684\n",
+      " 0.61850895 0.56327892 0.47290732 0.39819197 0.32843474]\n"
+     ]
+    }
+   ],
    "source": [
     "# Average the interpolated precision values over all queries.\n",
     "average_prec = np.zeros(len(pre_defined_recall))\n",
@@ -256,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b9321950-c777-4119-a749-aa55a7738a90",
    "metadata": {},
    "outputs": [],
@@ -284,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": ".venv (3.13.1)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
